--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
 				},
 				{
 					"id": "outputView",
-					"name": "输出"
+					"name": "输出",
+					"type": "webview"
 				},
 				{
 					"id": "expectedOutputView",
-					"name": "期望输出"
+					"name": "期望输出",
+					"type": "webview"
 				}
 			],
 			"problems-explorer": [
@@ -61,6 +63,11 @@
 				"view": "problemsExplorer",
 				"contents": "还没有试题。\n[添加试题](command:problemsExplorer.addProblem)\n[从文件夹添加试题](command:problemsExplorer.addProblemFromFolder)",
 				"when": "!problemsExplorer"
+			},
+			{
+				"view": "caseView",
+				"contents": "还没有测试样例。\n[添加样例](command:caseView.addCase)\n",
+				"when": "!caseView"
 			}
 		],
 		"commands": [
@@ -92,27 +99,27 @@
 			{
 				"command": "caseView.addCase",
 				"title": "添加样例",
-				"icon": "media/add.svg"
+				"icon": "$(add)"
 			},
 			{
 				"command": "caseView.deleteCase",
 				"title": "删除样例",
-				"icon": "media/minus.svg"
+				"icon": "$(remove)"
 			},
 			{
-				"command":"caseView.renameCase",
-				"title":"重命名样例",
-				"icon":"media/edit.svg"
+				"command": "caseView.renameCase",
+				"title": "重命名样例",
+				"icon": "media/edit.svg"
 			},
 			{
 				"command": "caseView.testSingleCase",
 				"title": "运行单个样例",
-				"icon": "media/play.svg"
+				"icon": "$(run)"
 			},
 			{
 				"command": "caseView.testAllCase",
 				"title": "运行所有样例",
-				"icon": "media/play.svg"
+				"icon": "$(run-all)"
 			},
 			{
 				"command": "outputView.copyOutput",
@@ -122,7 +129,12 @@
 			{
 				"command": "caseView.setting",
 				"title": "配置",
-				"icon": "media/setting.svg"
+				"icon": "$(gear)"
+			},
+			{
+				"command": "caseView.stopRunning",
+				"title": "停止运行",
+				"icon": "$(primitive-square)"
 			}
 		],
 		"menus": {
@@ -158,6 +170,11 @@
 					"group": "navigation"
 				},
 				{
+					"command": "caseView.testSingleCase",
+					"when": "view==caseView",
+					"group": "navigation"
+				},
+				{
 					"command": "caseView.testAllCase",
 					"when": "view==caseView",
 					"group": "navigation"
@@ -165,6 +182,11 @@
 				{
 					"command": "outputView.copyOutput",
 					"when": "view==outputView",
+					"group": "navigation"
+				},
+				{
+					"command": "caseView.stopRunning",
+					"when": "view==caseView",
 					"group": "navigation"
 				}
 			],
@@ -201,14 +223,20 @@
 		"test": "vscode-test"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.85.0",
 		"@types/mocha": "^10.0.6",
 		"@types/node": "18.x",
+		"@types/vscode": "^1.85.0",
 		"@typescript-eslint/eslint-plugin": "^6.19.1",
 		"@typescript-eslint/parser": "^6.19.1",
-		"eslint": "^8.56.0",
-		"typescript": "^5.3.3",
 		"@vscode/test-cli": "^0.0.4",
-		"@vscode/test-electron": "^2.3.9"
+		"@vscode/test-electron": "^2.3.9",
+		"eslint": "^8.56.0",
+		"typescript": "^5.3.3"
+	},
+	"dependencies": {
+		"monaco-editor": "^0.45.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"slate": "^0.101.5"
 	}
 }
