--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
 {
     "files.exclude": {
         "out": true,
-        "node_modules":true
+        "node_modules": true
     },
     "search.exclude": {
         "out": true // set this to false to include "out" folder in search results
@@ -12,5 +12,6 @@
     "[json]": {
         "editor.tabSize": 4,
         "editor.detectIndentation": false
-    }
+    },
+    "svg.preview.background": "custom"
 }
