--- a/package.json
+++ b/package.json
@@ -238,6 +238,7 @@
 		"test": "vscode-test"
 	},
 	"devDependencies": {
+		"@types/body-parser": "^1.19.5",
 		"@types/mocha": "^10.0.6",
 		"@types/node": "18.x",
 		"@types/vscode": "^1.85.0",
@@ -248,5 +249,8 @@
 		"eslint": "^8.56.0",
 		"typescript": "^5.3.3"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"body-parser": "^1.20.2",
+		"express": "^4.18.2"
+	}
 }
