--- a/package.json
+++ b/package.json
@@ -287,7 +287,6 @@
 		"@types/body-parser": "^1.19.5",
 		"@types/mocha": "^10.0.6",
 		"@types/node": "18.x",
-		"@types/pidusage": "^2.0.5",
 		"@types/vscode": "^1.70.0",
 		"@typescript-eslint/eslint-plugin": "^6.19.1",
 		"@typescript-eslint/parser": "^6.19.1",
@@ -298,7 +297,6 @@
 	},
 	"dependencies": {
 		"body-parser": "^1.20.2",
-		"express": "^4.18.2",
-		"pidusage": "^3.0.2"
+		"express": "^4.18.2"
 	}
 }
