--- a/package.json
+++ b/package.json
@@ -96,9 +96,9 @@
 				"icon": "media/folder-search.svg"
 			},
 			{
-				"command":"problemsExplorer.switchGroupingMethod",
-				"title":"切换分组方式",
-				"icon":"media/tree-list.svg"
+				"command": "problemsExplorer.switchGroupingMethod",
+				"title": "切换分组方式",
+				"icon": "media/tree-list.svg"
 			},
 			{
 				"command": "problemsExplorer.deleteProblem",
@@ -138,6 +138,11 @@
 				"command": "caseView.testAllCase",
 				"title": "运行所有样例",
 				"icon": "$(run-all)"
+			},
+			{
+				"command": "caseView.clearCompileCache",
+				"title": "清除编译缓存",
+				"icon": "media/clear.svg"
 			},
 			{
 				"command": "outputView.copyOutput",
@@ -182,9 +187,9 @@
 					"group": "navigation"
 				},
 				{
-					"command":"problemsExplorer.switchGroupingMethod",
-					"when":"view==problemsExplorer",
-					"group":"navigation"
+					"command": "problemsExplorer.switchGroupingMethod",
+					"when": "view==problemsExplorer",
+					"group": "navigation"
 				},
 				{
 					"command": "caseView.addCase",
@@ -208,6 +213,11 @@
 				},
 				{
 					"command": "caseView.stopRunning",
+					"when": "view==caseView",
+					"group": "navigation"
+				},
+				{
+					"command": "caseView.clearCompileCache",
 					"when": "view==caseView",
 					"group": "navigation"
 				},
