提供运行所有案例的快捷键支持

--- a/package.json
+++ b/package.json
@@ -376,7 +376,12 @@
 					"default": []
 				}
 			}
-		}
+		},
+		"keybindings": [{
+			"command": "caseView.testAllCase",
+			"key": "f10",
+			"when": "editorTextFocus"
+		}]
 	},
 	"scripts": {
 		"vscode:prepublish": "yarn run compile",
