编译测试快捷键的触发不再需要焦点在编辑器上，只需要当前打开的是.cpp文件

--- a/package.json
+++ b/package.json
@@ -407,7 +407,7 @@
 			{
 				"command": "caseView.testAllCase",
 				"key": "f10",
-				"when": "editorTextFocus&&resourceExtname==.cpp"
+				"when": "!explorerResourceIsFolder&&resourceExtname==.cpp"
 			},
 			{
 				"command": "explorer.compileAndRun",
@@ -417,7 +417,7 @@
 			{
 				"command": "caseView.testAllCaseForceCompile",
 				"key": "ctrl+f10",
-				"when": "editorTextFocus&&resourceExtname==.cpp"
+				"when": "!explorerResourceIsFolder&&resourceExtname==.cpp"
 			},
 			{
 				"command": "explorer.compileAndRunForceCompile",
