--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	"activationEvents": [
 		"onLanguage:cpp"
 	],
-	"main": "./out/extension.js",
+	"main": "./dist/extension.js",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/bakabaka9405/mirai-vscode.git"
@@ -142,8 +142,8 @@
 				"icon": "$(run)"
 			},
 			{
-				"command":"caseView.testAllCaseForceCompile",
-				"title":"强制重新编译并运行所有样例"
+				"command": "caseView.testAllCaseForceCompile",
+				"title": "强制重新编译并运行所有样例"
 			},
 			{
 				"command": "caseView.testAllCase",
@@ -427,12 +427,11 @@
 		]
 	},
 	"scripts": {
-		"vscode:prepublish": "yarn run compile",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
-		"pretest": "yarn run compile && yarn run lint",
-		"lint": "eslint src --ext ts",
-		"test": "vscode-test"
+		"vscode:prepublish": "npm run esbuild-base -- --minify",
+		"esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node",
+		"esbuild": "npm run esbuild-base -- --sourcemap",
+		"esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
+		"test-compile": "tsc -p ./"
 	},
 	"devDependencies": {
 		"@types/body-parser": "^1.19.5",
@@ -443,6 +442,7 @@
 		"@typescript-eslint/parser": "^6.19.1",
 		"@vscode/test-cli": "^0.0.4",
 		"@vscode/test-electron": "^2.3.9",
+		"esbuild": "^0.20.2",
 		"eslint": "^8.56.0",
 		"typescript": "^5.3.3"
 	},
