--- a/package.json
+++ b/package.json
@@ -427,10 +427,10 @@
 		]
 	},
 	"scripts": {
-		"vscode:prepublish": "npm run esbuild-base -- --minify",
+		"vscode:prepublish": "yarn esbuild-base --minify",
 		"esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node",
-		"esbuild": "npm run esbuild-base -- --sourcemap",
-		"esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
+		"esbuild": "yarn esbuild-base --sourcemap",
+		"esbuild-watch": "yarn esbuild-base --sourcemap --watch",
 		"test-compile": "tsc -p ./"
 	},
 	"devDependencies": {
